log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-service
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
  type: ClusterIP
