log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logOutput
            pathType: Prefix
            backend:
              service:
                name: log-service
                port:
                  number: 8085
